# dactyl

./: .env.example  .gitignore  Dockerfile  LAUNCH_SUMMARY.md  PHASE2_SUMMARY.md  README.md  blog-post.md  docker-compose.yml  fly.toml  package-lock.json  package.json  social-posts.md  tsconfig.json  tsconfig.scripts.json  vitest.config.ts
.github/workflows/: ci.yml
agents/: README.md  agent-recruiter.js  code-review-agent.js  dactyl-bot.js  hybrid-agent.js  orchestrator-agent.js  research-agent.js  summarization-agent.js  task-solicitor-agent.js
dashboard/: index.html  package.json
docs/: API.md  dactyl-sdk.ts
scripts/: db-migrate.ts  db-seed.ts  gen-openapi.ts  gen-rsa-keys.ts
sdk/python/: README.md  examples.py  pyproject.toml
sdk/python/dactyl_sdk/: __init__.py  client.py  types.py  webhook.py
sdk/typescript/: package-lock.json  package.json  tsconfig.json
src/: app.js  app.js.map  app.ts  env.js  env.js.map  env.ts  index.ts  types.js  types.js.map  types.ts  worker.ts
src/auth/: api-key.js  api-key.js.map  api-key.ts  jwt.js  jwt.js.map  jwt.ts  keys.js  keys.js.map  keys.ts  middleware.js  middleware.js.map  middleware.ts
src/credits/: fee.js  fee.js.map  fee.ts  ledger.js  ledger.js.map  ledger.ts  stripe.js  stripe.js.map  stripe.ts
src/dactyl-bot/: bot.ts  index.ts  scheduler.ts
src/db/: client.js  client.js.map  client.ts
src/jobs/: claim-expiry.ts  index.ts  karma-auto-award.ts  progress-expiry.ts  task-expiry.ts
src/karma/: engine.js  engine.js.map  engine.ts  events.js  events.js.map  events.ts  streak.js  streak.js.map  streak.ts
(+79 files in other folders)
