[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dactyl-sdk"
version = "1.0.0"
description = "Python SDK for the Dactyl A2A agent marketplace"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]
